--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,40 +1,4 @@
 <div>
-  <div class="row">
-    <div class="col-12">
-      <h1 class="text-center"> Angular 9 CRUD</h1>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12">
-      <button class="btn btn-success" (click)="getNavigation('create', '')">Create New Product</button>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-12">
-      <table #productsTable class="display" style="width:100%">
-        <thead>
-        <tr>
-          <th>#</th>
-          <th>Name</th>
-          <th>Description</th>
-          <th>Price</th>
-          <th>Action</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr *ngFor="let product of products; let i =index;">
-          <td>{{i + 1}}</td>
-          <td>{{product.p_name}}</td>
-          <td>{{product.p_description}}</td>
-          <td>$ {{product.p_price}}</td>
-          <td>
-            <button type="button" class="btn btn-success" (click)="getNavigation('view', product.p_id)">View</button>&nbsp;
-            <button type="button" class="btn btn-warning" (click)="getNavigation('update', product.p_id)">Edit</button>&nbsp;
-            <button type="button" class="btn btn-danger">Delete</button>
-          </td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
+  <router-outlet></router-outlet>
 </div>
+     
